Fixed videos load on IE.

--- a/bathroom-happiness/sass/pages/_water_therapy.scss
+++ b/bathroom-happiness/sass/pages/_water_therapy.scss
@@ -1265,7 +1265,9 @@ body.water-therapy{
 						opacity: 0;
 						@include animation(card_in 1s ease-in-out 0.5s forwards);
 						&.ie-lt{
+							@include animation(none);
 							opacity: 1;
+							z-index: 5;
 							@include transition(1s all ease-in-out);
 						}
 						//@include transform(translateY(0) translateZ(0));
